--- a/gaspar8/src/main/java/it/mate/econyx/client/css/app-bundle-custom.css
+++ b/gaspar8/src/main/java/it/mate/econyx/client/css/app-bundle-custom.css
@@ -3,6 +3,13 @@
 
 @external Text, ContextBoxHead, BasketLink;
 
+
+/************************************************************************************
+
+	HTML AND GWT CSS
+   
+****/
+
 body {
   background: #a8c0ce url(images/grad.png) top left repeat;
 }
@@ -16,6 +23,13 @@ a, a:active, a:focus {
   font: 14px Verdana;
 }
 
+
+/************************************************************************************
+
+	MWT CSS
+   
+****/
+
 .mwt-PagePortlet {
   padding-top: 20px;
 }
@@ -25,9 +39,6 @@ a, a:active, a:focus {
 }
 
 .mwt-BoxContainerTitle {
-  /*
-  background: url("/images/bgr_box_cont_title.gif") no-repeat scroll left top transparent;
-  */
   background: #cbcbcb;
   margin: 0;
   padding: 4px 0px 0px 10px;
@@ -54,12 +65,34 @@ a, a:active, a:focus {
 }
 
 
+/************************************************************************************
+
+	TPL CSS
+   
+****/
+
 .tpl-HomeWrapper {
-  /*
-     ATTENZIONE: SPOSTATO IN main/webapp/atyles/app-custom.css
-     perche da fastidio al generatore css di gwt
-  */
+  
+  width: 100%;
+  -moz-box-shadow: 0px 0px 6px #666;
+  -webkit-box-shadow: 0px 0px 6px #666;
+  padding: 8px;
+  border: 1px solid #fff;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;  
+  margin: 30px auto 10px;
+  
+  background: #f8ffe8; /* Old browsers */
+  background: -moz-linear-gradient(left,  #f8ffe8 0%, #e3f5ab 33%, #b7df2d 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%,#f8ffe8), color-stop(33%,#e3f5ab), color-stop(100%,#b7df2d)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(left,  #f8ffe8 0%,#e3f5ab 33%,#b7df2d 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(left,  #f8ffe8 0%,#e3f5ab 33%,#b7df2d 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(left,  #f8ffe8 0%,#e3f5ab 33%,#b7df2d 100%); /* IE10+ */
+  background: linear-gradient(to right,  #f8ffe8 0%,#e3f5ab 33%,#b7df2d 100%); /* W3C */
+
 }
+
 
 .tpl-headerBanner {
   		
@@ -79,6 +112,12 @@ a, a:active, a:focus {
   background: #fff; /* Old browsers */
 
 }
+
+/************************************************************************************
+
+   NAV CSS
+   
+****/
 
 .navPropertiesContainer {
   
@@ -209,6 +248,104 @@ a, a:active, a:focus {
     text-decoration: underline;
 }
 
+
+
+/************************************************************************************
+
+	ECX CSS
+   
+****/
+
+.ecxPortalPageView .gwt-HTML {
+  font-size: 14px;
+}
+
+
+
+/*************************************************************************************************
+
+	Posts CSS
+  
+	basati su template http://btemplates.com/2013/blogger-template-abstractline/demo
+  
+**/
+
+.ecxPostCreated {
+  background: url("main/images/commons/post-header-date.png") no-repeat scroll left -1px transparent;
+  padding-left: 20px;
+  font: 12px Arial;
+}
+
+.ecxPortalPageView .gwt-HTML.ecxPostTitle {
+  font: Arial;
+  font-size: 170%;
+  line-height: 1.4em;
+  cursor: pointer;
+}
+
+.ecxPostFooter {
+  background: none repeat scroll 0 0 #F7F7F7;
+  border-bottom: 1px solid #DDDDDD;
+  border-top: 1px solid #DDDDDD;
+  color: #555555;
+  font: 90%/1.4em Trebuchet,Arial,Verdana,Sans-serif;
+  letter-spacing: 0;
+  margin-bottom: 0.75em;
+  margin-left: 0;
+  margin-top: 7px;
+  padding: 10px;
+  text-transform: none;
+}
+
+.ecxPortalPageView .ecxPostFooter .gwt-HTML {
+  font: 12px Trebuchet,Arial,Verdana,Sans-serif;
+}
+
+.ecxPostAuthor {
+  background: url("main/images/commons/post-author.png") no-repeat scroll 0 0 transparent;
+  padding-left: 20px;
+}
+
+.ecxPostCommentsCount {
+  background: url("main/images/commons/post-comment.png") no-repeat scroll 0 0 transparent;
+  padding-left: 20px;
+}
+
+.ecxPostTags {
+  background: url("main/images/commons/post-tags.png") no-repeat scroll 0 0 transparent;
+  padding-left: 20px;
+}
+
+.ecxCommentsHeaderCount {
+  color: #666666;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 0;
+  line-height: 1.4em;
+  padding-bottom: 2em;
+}
+
+.ecxCommentAuthor {
+  color: #1F7117;
+  font-weight: bold;
+  font: 12px Arial,Serif;
+}
+
+.ecxCommentPosted {
+  font: 12px Arial,Serif;
+}
+
+.ecxCommentSpacer {
+  height: 2em;
+}
+
+
+/************************************************************************
+
+    CALENDAR CSS
+    
+ */
+
 .ecxCalendarWidgetCell {
   text-align: center;
 }
@@ -223,7 +360,16 @@ a, a:active, a:focus {
   width: 100px;
 }
 
-.ecxPortalPageView .gwt-HTML {
-  font-size: 14px;
+.ecxCalendarWidgetCell .ecxCalDay {
+  background: url(/main/images/commons/cal-num-bg.png) left top repeat-x;
+}
+
+.ecxCalendarWidgetCell.ecxCalendarWidgetHeaderWeek {
+  background: #fff url(/main/images/commons/cal-days-bg.png) left bottom repeat-x;
+}
+
+.ecxCalendarWidgetCellNum {
+  padding-top: 0;
+  border: 1px solid #9A9A9A;
 }
 
