--- a/trunk/gaspar8/src/main/java/it/mate/econyx/client/css/app-bundle-custom.css
+++ b/trunk/gaspar8/src/main/java/it/mate/econyx/client/css/app-bundle-custom.css
@@ -41,8 +41,8 @@ a, a:active, a:focus {
 .mwt-BoxContainerTitle {
   background: #cbcbcb;
   margin: 0;
-  padding: 4px 0px 0px 10px;
-  height: 20px;
+  padding: 8px 0px 0px 10px;
+  height: 28px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;  
@@ -53,7 +53,7 @@ a, a:active, a:focus {
 }
 
 .mwt-BoxContainerTitle span {
-	color: #FFFFFF;
+  color: #FFFFFF;
   font-family: Arial,Verdana,Helvetica;
   font-size: 13px;
   font-style: normal;
@@ -361,15 +361,31 @@ a, a:active, a:focus {
 }
 
 .ecxCalendarWidgetCell .ecxCalDay {
+  /*
   background: url(/main/images/commons/cal-num-bg.png) left top repeat-x;
+   */
+  background-color: #EFEFEF;
 }
 
 .ecxCalendarWidgetCell.ecxCalendarWidgetHeaderWeek {
+  /*
   background: #fff url(/main/images/commons/cal-days-bg.png) left bottom repeat-x;
+   */
+  background-color: #D9E2E1
 }
 
 .ecxCalendarWidgetCellNum {
-  padding-top: 0;
+  /*
   border: 1px solid #9A9A9A;
+   */
+  padding-top: 0;
+  background-color: #EFEFEF;
+  border-right: 1px solid #A2ADBC;
+  border-bottom: 1px solid #A2ADBC;
 }
 
+.ecxCalendarWidgetCell.ecxCalendarWidgetCellWithData {
+  background-color: #CCE0FF;
+  border-bottom: 1px solid #A2ADBC;
+  border-right: 1px solid #A2ADBC;	
+}
