--- a/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/view/ProtocolStepView.ui.xml
+++ b/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/view/ProtocolStepView.ui.xml
@@ -1,12 +1,40 @@
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder"
        xmlns:g="urn:import:com.google.gwt.user.client.ui" 
-       xmlns:m="urn:import:com.googlecode.mgwt.ui.client.widget" xmlns:p="urn:import:it.mate.phgcommons.client.ui">
+       xmlns:m="urn:import:com.googlecode.mgwt.ui.client.widget" 
+       xmlns:p="urn:import:it.mate.phgcommons.client.ui" 
+       xmlns:gc="urn:import:it.mate.gwtcommons.client.ui" 
+       xmlns:P="urn:import:it.mate.ckd.client.view">
        
   <g:HTMLPanel ui:field="wrapperPanel" addStyleNames="ckdHomePanel, ckdProtocolStepViewPanel">
   
   
-    <g:VerticalPanel horizontalAlignment="CENTER" verticalAlignment="MIDDLE" width="100%" height="80%" ui:field="stepPanel">
+    <gc:SimpleContainer addStyleNames="ckd-ProtocolHeaderPanel" ui:field="protocolHeaderPanel">
     
+      <g:HTML addStyleNames="ckd-ProtocolHeaderPanel-center">
+        Protocol for the further investigation of a subject with positive reagent strip or quantitative test for albuminuria/proteinuria
+      </g:HTML>
+      
+      <g:HTMLPanel addStyleNames="ckd-ProtocolHeaderButton" ui:field="backBtnPanel">
+        <div class="ckd-ProtocolHeaderButton-border-container">
+          <span class="ckd-ProtocolHeaderButton-border-content"></span>
+        </div>
+        <P:ProtocolStepView.BackStepButton ui:field="backBtn" addStyleNames="ckd-ProtocolHeaderButton-text" text="Prev Step"/>
+      </g:HTMLPanel>
+
+      <!--       
+      <g:HTML addStyleNames="ckd-ProtocolHeaderButton">
+        <div class="ckd-ProtocolHeaderButton-border-container">
+          <span class="ckd-ProtocolHeaderButton-border-content"></span>
+        </div>
+        <p class="ckd-ProtocolHeaderButton-text">Prev Step</p>
+      </g:HTML>
+       -->
+
+    </gc:SimpleContainer>
+  
+    <g:VerticalPanel horizontalAlignment="CENTER" verticalAlignment="MIDDLE" width="100%" height="80%" ui:field="stepPanel" addStyleNames="ckd-stepPanel">
+    
+      <!-- 
       <g:VerticalPanel horizontalAlignment="CENTER" verticalAlignment="MIDDLE" width="100%" height="300px">
         <p:SmartButton ui:field="backBtn" text="Back" addStyleNames="ckdProtocolBackBtn" visible="false"/>
         <g:HTML ui:field="questionHtml"></g:HTML>
@@ -15,11 +43,36 @@
           <p:SmartButton ui:field="answer2Btn"/>
         </g:HorizontalPanel>
       </g:VerticalPanel>
+       -->
+       
+      <!--  
+      <p:SmartButton ui:field="backBtn" text="Back" addStyleNames="ckdProtocolBackBtn" visible="false" height="0" width="0"/>
+       -->
       
+      <gc:SimpleContainer>
+        <gc:SimpleContainer addStyleNames="ckd-ProtocolStepPanel" ui:field="protocolStepPanel">
+          <gc:SimpleContainer addStyleNames="ckd-ProtocolStepPanel-top">
+            <g:Label text="Step 1"/>
+          </gc:SimpleContainer>
+          <gc:SimpleContainer addStyleNames="ckd-ProtocolStepPanel-center">
+            <g:HTML ui:field="questionHtml"></g:HTML>
+            <g:HTML ui:field="endHtml" visible="false"></g:HTML>
+          </gc:SimpleContainer>
+          <gc:SimpleContainer addStyleNames="ckd-ProtocolStepPanel-bottom">
+            <p:SmartButton ui:field="answer1Btn" text="Yes" addStyleNames="ckd-ProtocolStepPanel-button"/>
+            <p:SmartButton ui:field="answer2Btn" text="No" addStyleNames="ckd-ProtocolStepPanel-button"/>
+            <p:SmartButton ui:field="gfrBtn" text="Return to GFR" visible="false"/>
+          </gc:SimpleContainer>
+        </gc:SimpleContainer>
+      </gc:SimpleContainer> 
+      
+
+      <!--       
       <g:VerticalPanel horizontalAlignment="CENTER" verticalAlignment="MIDDLE" width="100%" height="200px" ui:field="endPanel" visible="false">
         <g:HTML ui:field="endHtml"></g:HTML>
         <p:SmartButton ui:field="gfrBtn" text="Go To GFR" width="6em"/>
       </g:VerticalPanel>
+       -->
     
     </g:VerticalPanel>
   
