--- a/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/ui/theme/custom/css/ios/tablet.css
+++ b/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/ui/theme/custom/css/ios/tablet.css
@@ -91,10 +91,20 @@
   font-size: 32px;
 }
 
+.ckd-ProtocolStepPanel {
+  margin-top: 80px;
+  height: 400px;
+}
+
 .ckd-ProtocolHeaderButton-text {
   font-size: 20px;
+  padding: 1px;
+  height: 54px;
+  top: 3px;
 }
 
 .ckd-ProtocolHeaderPanel-center {
   font-size: 20px;
+  margin-top: 6px;
+  margin-bottom: 8px;
 }
